--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <main>
-        <h1 id="title">Ты далбоёб?</h1>
+        <h1 id="title">Ты пидр?</h1>
         <button id="yes">Да</button>
         <button id="no">Нет</button>
     </main>
@@ -76,6 +76,14 @@
         setTimeout(() => {
             title.innerHTML = "Ты далбоёб?"
         }, 2000)
+    buttonNo.addEventListener("click", (ev) => {
+        ev.preventDefault()
+
+        title.innerHTML = "Пидора ответ!"
+        setTimeout(() => {
+            title.innerHTML = "Ты пидр?"
+        }, 2000)
+        
     })
 </script>
 </body>
