--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
     </style>
 </head>
 <body>
+    <nav class="navbar">
+        <ul class="links">
+            <li><a href="you-daun.html">Ты даун?</a></li>
+            <li><a href="crash.html">Краш браузера</a></li>
+        </ul>
+    </nav>
     <main>
         <h1 id="title">Ты пидр?</h1>
         <button id="yes">Да</button>
